# semantic_map_nav

./: .gitignore  CMakeLists.txt  catkin_ws_top_level_files  package.xml  学术论文-语义地图构建与目标导航系统研究.md  学术论文-语义地图构建与目标导航系统研究v2.md  学术论文撰写格式规范（通用模板）.md  论文图表集.md  论文撰写指南.md
src/semantic_map/: CMakeLists.txt  USAGE.md  package.xml
src/semantic_map/action/: NavigateToSemanticTag.action
src/semantic_map/config/: semantic_map.rviz
src/semantic_map/data/: map.pgm  map.yaml  semantic_tags.json
src/semantic_map/launch/: full_system.launch  semantic_map.launch  semantic_map_with_rviz.launch  simulation.launch
src/semantic_map/scripts/: semantic_navigator.py  semantic_tag_manager.py  semantic_visualizer.py  test_semantic_map.py
src/semantic_map/srv/: AddSemanticTag.srv  ListSemanticTags.srv  NavigateToSemanticTag.srv  QuerySemanticTag.srv
图表输出/: 对比实验数据.md
